--- a/templates/app/qr.html.twig
+++ b/templates/app/qr.html.twig
@@ -1,10 +1,8 @@
 {% extends 'base_app.html.twig' %}
 {% block style %}
-  
 
   <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/pincode.css')}}" media="screen,projection" />  
 
- 
   <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/qr.css')}}" media="screen,projection" />  
 {% endblock %}
  
@@ -14,7 +12,7 @@
         <ul class="left">
           <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
         </ul>
-        <a href="#!" class="brand-logo">Promociones</a>
+        <a href="#!" class="brand-logo">Qr Code</a>
         <ul class="right">
           <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
         </ul>
