change theme to vendedor

--- a/templates/app_vendedor/qr.html.twig
+++ b/templates/app_vendedor/qr.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base_app.html.twig' %}
+{% extends 'base_app_vendedor.html.twig' %}
 {% block style %}
   
   <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/pincode.css')}}" media="screen,projection" />  
