--- a/templates/app_vendedor/configuracion.html.twig
+++ b/templates/app_vendedor/configuracion.html.twig
@@ -55,9 +55,10 @@
 		var email = localStorage.getItem('punto_venta_id');
 		var punto_venta_id=localStorage.getItem('punto_venta_id');
 
-		if(email!="" && punto_venta_id!=""){
+		/*if(email!="" && punto_venta_id!=""){
 			location.href='dashboard?punto_venta='+punto_venta_id;
 		}
+    */
 		$(document).ready(function(){
 			
 			$('.punto-venta').click(function(){
