--- a/templates/app_vendedor/qr_scanner.html.twig
+++ b/templates/app_vendedor/qr_scanner.html.twig
@@ -63,7 +63,7 @@
           <div class="form-field-caption-panel">
             <div class="gwt-Label form-field-caption">
               
-              <label id="txtqr" >Esperando Scaneo Qr</label>
+              <label id="txtqr" >Esperando Escaneo Qr</label>
             </div>
           </div>
           
@@ -75,6 +75,12 @@
     </div>
 </div>
 </section>
+
+<section>
+  
+</section>
+
+
 {% endblock %} 
 {% block javascripts %}
 <script type="text/javascript">
