--- a/templates/app_vendedor/configuracion.html.twig
+++ b/templates/app_vendedor/configuracion.html.twig
@@ -67,7 +67,7 @@
 
 				localStorage.setItem('email_gasolinera', email);
 				localStorage.setItem('punto_venta_id', id);
-
+        location.href='dashboard?punto_venta='+id;
 
 			})
 		});
