--- a/templates/app_vendedor/qr_scanner.html.twig
+++ b/templates/app_vendedor/qr_scanner.html.twig
@@ -38,7 +38,7 @@
 {% endblock%} 
 {% block body %}
   
- <section class="mt-2">
+ <section class="mt-2" id="section-qr">
     <div class="row">
       <div class="col s12">
  
@@ -76,18 +76,46 @@
 </div>
 </section>
 
-<section>
-  
+<section id="section-enviar" style="display: none">
+      <div class="row">
+      <div class="col s12">
+ 
+  <h4>Qr Scanner</h4>
+  <form>
+    <input type="hidden" id="email_user" name="email_user" value="" >
+     <div class="input-value col s12">
+    <label>
+      <span>Digita el valor de la compra </span>
+      <input name="valor" type="text" size="20" onkeydown="return soloNumeros(event)" >
+    </label>
+
+  </div>
+   <button type="submit" class="btn btn-success">Recargar</button>
+  </form>
+</div>
+</div>
 </section>
 
 
 {% endblock %} 
 {% block javascripts %}
 <script type="text/javascript">
+
+     function soloNumeros(e)
+    {
+      var key = window.Event ? e.which : e.keyCode
+      return ((key >= 48 && key <= 57) || (key==8))
+    }
+
+
     function onQRCodeScanned(scannedText)
     {
       console.log(scannedText);
+      alert(scannedText);
       $('#txtqr').text(scannedText);
+      $('#email_user').val(scannedText);
+      $("#section-enviar").show();
+      $("#section-qr").hide();
     }
     
     function provideVideo()
