--- a/templates/app/qr.html.twig
+++ b/templates/app/qr.html.twig
@@ -104,6 +104,7 @@
   <script type="text/javascript">
     $(document).ready(function(){
       $('#qrcode').qrcode("danykyroz@gmail.com");
+      console.log('qr code ok');
 
     })
   </script>
