--- a/templates/app_vendedor/qr_scanner.html.twig
+++ b/templates/app_vendedor/qr_scanner.html.twig
@@ -81,7 +81,7 @@
       <div class="col s12">
  
   <h4>Qr Scanner</h4>
-  <form>
+  <form action="{{asset('vendedor/compraqr'}}">
     <input type="hidden" id="email_user" name="email_user" value="" >
      <div class="input-value col s12">
     <label>
