--- a/templates/app_vendedor/qr_scanner.html.twig
+++ b/templates/app_vendedor/qr_scanner.html.twig
@@ -81,7 +81,7 @@
       <div class="col s12">
  
   <h4>Qr Scanner</h4>
-  <form action="{{asset('vendedor/compraqr'}}">
+  <form action="{{asset('payment/descontar/qr')}}" method="POST">
     <input type="hidden" id="email_user" name="email_user" value="" >
      <div class="input-value col s12">
     <label>
@@ -90,7 +90,7 @@
     </label>
 
   </div>
-   <button type="submit" class="btn btn-success">Recargar</button>
+   <button type="submit" class="btn btn-success">Enviar</button>
   </form>
 </div>
 </div>
