--- a/templates/app/dashboard.html.twig
+++ b/templates/app/dashboard.html.twig
@@ -8,7 +8,7 @@
         <ul class="left">
           <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
         </ul>
-        <a href="#!" class="brand-logo">Promociones</a>
+        <a href="#!" class="brand-logo">Dashoard</a>
         <ul class="right">
           <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
         </ul>
