--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -10,6 +10,8 @@
 
 {% block javascripts %}
 	 <script type="text/javascript">
+	     $('.navbar-fixed').remove();
+
 		$(document).ready(function(){
 			setTimeout(function(){
 			location.href='slider';
