--- a/templates/app/profile.html.twig
+++ b/templates/app/profile.html.twig
@@ -74,6 +74,10 @@
 
 {% endblock %}
 
+
+{% block footer %}
+
+ {% endblock %}
 {% block javascripts %}
 <script type="text/javascript">
   $(document).ready(function(){
