--- a/templates/app_vendedor/dashboard.html.twig
+++ b/templates/app_vendedor/dashboard.html.twig
@@ -3,26 +3,7 @@
 
 {% endblock %}
 {% block header %}
-    <nav>
-      <div class="nav-wrapper principal_bg">
-        <ul class="left">
-          <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
-        </ul>
-        <a href="#!" class="brand-logo">Dashboard</a>
-        <ul class="right">
-          <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
-        </ul>
-        <!-- Menu 2 -->
-        <ul id='menu2' class='dropdown-content'>
-          <li><a href="#!">Ajustes de Seguridad</a></li>
-          <li><a href="#!">Solicitar Credito</a></li>
-          <li class="divider"></li>
-          <li><a href="#!">Información</a></li>
-          <li><a href="{{asset('logout')}}">Cerrar Sesión</a></li>
-        </ul>
-
-      </div>
-    </nav>
+    {{include('app_vendedor/nav.html.twig')}}
 {% endblock%} 
 {% block body %}
 
