--- a/templates/base_app.html.twig
+++ b/templates/base_app.html.twig
@@ -49,9 +49,11 @@
 <body class="">
 
   <header>
+  <div class="navbar-fixed">
   {% block header %}
-
   {% endblock %}
+  </div>
+
   </header>
   {% block body %}
  
