--- a/templates/app/dashboard.html.twig
+++ b/templates/app/dashboard.html.twig
@@ -1,14 +1,16 @@
 {% extends 'base_app.html.twig' %}
 {% block style %}
-
+<style type="text/css">
+  th,td{
+    border-bottom:1px solid #ccc;
+  }
+</style>
 {% endblock %}
 {% block header %}
-    <nav>
+   <nav>
       <div class="nav-wrapper principal_bg">
-        <ul class="left">
-          <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
-        </ul>
-        <a href="#!" class="brand-logo">Dashoard</a>
+       
+        <a href="#!" class="brand-logo" id="header_title" >Permergas</a>
         <ul class="right">
           <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
         </ul>
@@ -16,9 +18,10 @@
         <ul id='menu2' class='dropdown-content'>
           <li><a href="#!">Ajustes de Seguridad</a></li>
           <li><a href="#!">Solicitar Credito</a></li>
+          <li><a href="#!">Medios Pago</a></li>
           <li class="divider"></li>
           <li><a href="#!">Información</a></li>
-          <li><a href="{{asset('logout')}}">Cerrar Sesión</a></li>
+          <li><a href="{{asset('app/logout')}}">Cerrar Sesión</a></li>
         </ul>
 
       </div>
@@ -54,26 +57,40 @@
     <div class="container">
       <div class="row ">
         <div class="col s12">
-          <h4 class="date_title"> Transaciones</h4>
+          <h4 class="date_title"> Movimientos</h4>
           <div id="no-more-" class="card-body table-responsive">
-        <table class="table table-condensed">
+        <table class="table table-responsive">
             <thead>
                 <thead>
                     <tr>
-                        <th>Fecha</th>
-                        <th>Valor</th>
-                        <th>Estado</th>
+                        <th colspan="3"></th>
+                       
                     </tr>
                 </thead>
-                <tbody>  
+                <tbody style="">  
                 {% for transaccion in transacciones %}
                     <tr>
-                       <td data-title="Fecha">{{transaccion.createdAt|date('d/m/d h:i A')}}</td>
+                       <td data-title="Fecha">
+                        {% if transaccion.tipoMovimiento.id==1 %}
+                        <b>Recarga Digital</b>
+                        {%else %}
+                        <b>Compra Gasolina</b>
+                        {% endif%}
+                        <br/>
+                       {{transaccion.createdAt|date('d/m/d h:i A')}}</td>
+                       <td>
+                        {% if transaccion.tipoMovimiento.id==1 %}
+                        <i class="material-icons" style="color: green" >arrow_upward</i>
+                        {% else %}
+                        <i class="material-icons" style="color: red">arrow_downward</i>
+                        {% endif %}
+                      </td>
                        <td data-title="Valor">
-                        <span {% if transaccion.tipoTransaccion==1 %} class="success-transaccion" {% else %} class="danger-transaccion" {% endif%} >                       {{transaccion.valor|number_format(2)}}
+                        <span {% if transaccion.tipoMovimiento.id==1 %} class="success-transaccion" {% else %} class="danger-transaccion" {% endif%} >
+                          {{transaccion.valor|number_format(2)}}
                         </span>
                         </td>
-                       <td data-title="Estado">{{transaccion.estado}}</td>
+                       
                     </tr>
                 {% endfor %} 
                 </tbody>
@@ -85,5 +102,7 @@
     </div>
   </section>
  
- {% endblock %}
+{% endblock %}
+{% block javascripts %}
 
+{% endblock %}
