--- a/templates/app/login.html.twig
+++ b/templates/app/login.html.twig
@@ -1,6 +1,11 @@
  {% extends 'base_app.html.twig' %}
 {% block style %}
   <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/inputs.css')}}" media="screen,projection" />  
+
+   <script type="text/javascript">
+       var message_error='';
+   </script>
+  
 {% endblock %}
 
 
@@ -68,9 +73,17 @@
         </div>
     {% endfor %} 
     {% for message in app.flashes('bad') %}
-	<div class="alert bg-pink alert-dismissible" role="alert" style="width: 100%; text-align: center;margin-top: 10px">
+	 
+   <script type="text/javascript">
+        message_error='{{message}}';
+   </script>
 	   
-   <span style="color: white; margin-left: 20px"> {{message}} </span>
+   
+<script type="text/javascript">
+
+</script>
+
+
 	</div>
 {% endfor %} 
     <br/>
@@ -124,6 +137,10 @@
 {% block javascripts %}
 
 <script type="text/javascript">
+    $('.navbar-fixed').remove();
+    if(message_error!=""){
+      Materialize.toast('Usuario o contraseña invalido!', 4000)
+    }
 
     $('#frm-login').validate({
         rules: {
@@ -166,10 +183,17 @@
     $("#iniciar-sesion").click(function(e){
       e.preventDefault();
       var valid=$("#frm-login").valid();
+       $("#iniciar-sesion").attr('disabled',true);
+       $("#username").attr('disabled',true);
+       $("#password").attr('disabled',true);
       if(valid){
-        $("#frm-login").submit();
+       $("#username").attr('disabled',false);
+       $("#password").attr('disabled',false);
+       $("#frm-login").submit();
       }else{
-
+       $("#iniciar-sesion").attr('disabled',false);
+       $("#username").attr('disabled',false);
+       $("#password").attr('disabled',false);
       }
     });
 
