--- a/templates/base_app_vendedor.html.twig
+++ b/templates/base_app_vendedor.html.twig
@@ -20,7 +20,9 @@
   <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/materialize.min.css')}}" media="screen,projection" />
  
  <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/main.css')}}" media="screen,projection" />
-  
+    
+  <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/vendedor.css')}}" media="screen,projection"" media="screen,projection" />
+
 
   {% block style %}
 
@@ -61,21 +63,7 @@
   
   {% block footer %}
 
-     <div class="app-bar">
-     <div class="bar">
-       <a class="action_bottom" href="{{asset('vendedor/gasolineras')}}"> <i class="material-icons">map</i> </a>
-       <a class="action_bottom" href="{{asset('vendedor/transacciones')}}"> <i class="material-icons">trending_up</i> </a>
-       <a class="action_bottom"> </a>
-       <a class="action_bottom" href="{{asset('vendedor/dashboard')}}"> > </a>
-       
-       <a href="{{asset('vendedor/qr')}}" class="circle_btn button" >
-        <i class="material-icons gas-img">local_gas_station </i>
-       </a>
-       <a class="action_bottom" href="{{asset('vendedor/promociones')}}"> <i class="material-icons">card_giftcard</i </a>
-       
-       <a class="action_bottom" href="{{asset('vendedor/profile')}}"> <i class="material-icons">person</i> </a>
-     </div>
-    </div>
+    
 
   <footer>
   </footer>
