--- a/templates/app/respuesta.html.twig
+++ b/templates/app/respuesta.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base_app.html.twig' %}
+{% block style %}
+   <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/responses.css')}}" media="screen,projection" />  
 
+{% endblock %}
 {% block header %}
     <nav>
       <div class="nav-wrapper principal_bg">
@@ -23,12 +26,56 @@
 {% endblock %}
 {% block body %}
  
+{% if type=="oxxo_cash" %}
+<section class="mt-4">
+    <div class="row">
+      <div class="col s6">
+        <img class="responsive-img" src="{{asset('themeapp/img/icons_cc/oxxo-pay.webp')}}" alt="">
+      </div>
+      <div class="col s6">
+        <span class="subs">MONTO A PAGAR</span>
+        <h4 class="value">$ {{orden._values.amount|slice(0,-2)|number_format(2)}} <sup><small class="sup">MXN</small></sup> </h4>
+        <p class="message"> <small> <i>OXXO  cobrará una comisión adicional al momento de realizar el pago.</i> </small> </p>
+      </div>
 
+      <div class="col s12">
+        <p class="m0 "><b>REFERENCIA</b></p>
+        <div class="card">
+          <div class="card-content2">
+              <h3 class="center m0"> {{reference}}</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+      <div class="col s12">
+        <p class="m0 "><b>INSTRUCCIONES</b></p>
+        <ol class="steps">
+          <li>Acude ala tienda OXXO más cercana.</li>
+          <li>Indica en caja que quieres realizar un pago de <b>OXXOPay</b>. </li>
+          <li>Dicta al cajero el número de referencia en esta ficha para que tecleé directamente en la pantalla de venta.</li>
+          <li>Realiza el pago correspondiente con dinero en efectivo.</li>
+          <li>Al confirmar tu pago, el cajero te entregará un comprobante impreso. <b>En él podrás verificar que se haya realizado correctamente.</b> Conserva este comprobante de pago. </li>
+        </ol>
+
+        <p class="succes-message">Al completar estos pasos, <b>Permergas</b> te enviará un correo confirmando tu pago de manera inmediata. </p>
+       </div>
+     </div>
+
+
+  </section>
+
+{% else %}
   <div class="row">
       <div class="col s12">
         <ul class="collection with-header">
           <li class="collection-header">
-            <h4>Respuesta Pago</h4>
+            <h4>Respuesta Pago
+             <i class="material-icons large green-text darken-3 center">check</i>
+            </h4>
           </li>
           <li class="collection-item">
                        <div class="card-body table-responsive">
@@ -42,11 +89,19 @@
             <tr>
                 <th>Valor</th>
                 <td>{{orden._values.amount|slice(0,-2)|number_format(2)}}</td>
-               </tr>
+            </tr>
                <tr>
                 <th>Estado Orden</th>
-                <td>{{orden._values.payment_status}}</td>
-            </tr>
+                <td>
+                  {% if orden._values.payment_status=='paid' %}
+                  <span style="color: green"> 
+                    Pagada
+                  </span>
+                  {% else %}
+                  <span>Pendiente</span>
+                  {% endif %}
+                </td>
+              </tr>
             </tbody>
             </table>
           
@@ -56,6 +111,7 @@
         </ul>
       </div>
     </div>
+{% endif %}
 
 
 
