--- a/templates/app_vendedor/dashboard.html.twig
+++ b/templates/app_vendedor/dashboard.html.twig
@@ -7,54 +7,43 @@
 {% endblock%} 
 {% block body %}
 
+ <section class="body_vendedor valign-wrapper">
+<div class="container_90">
 
-  <section class="pricing-table">
-    <div class="container">
-      <div class="row ">
-        <div class="col s6">
-          <h4 class="date_title"> <span>Valor por litro</span> <br> {{fecha|date('d/m/y')}} </h4>
-        </div>
-        <div class="col s6">
-          <h3 class="gas_price">1090<span>MXN</span> </h3>
-        </div>
-      </div>
-    </div>
-  </section>
 
-    <section class="pricing-table">
-    <div class="container">
-      <div class="row ">
-        <div class="col s12">
-          <h4 class="date_title"> Transaciones</h4>
-          <div id="no-more-" class="card-body table-responsive">
-        <table class="table table-condensed">
-            <thead>
-                <thead>
-                    <tr>
-                        <th>Fecha</th>
-                        <th>Valor</th>
-                        <th>Estado</th>
-                    </tr>
-                </thead>
-                <tbody>  
-                {% for transaccion in transacciones %}
-                    <tr>
-                       <td data-title="Fecha">{{transaccion.createdAt|date('d/m/d h:i A')}}</td>
-                       <td data-title="Valor">
-                        <span {% if transaccion.tipoTransaccion==1 %} class="success-transaccion" {% else %} class="danger-transaccion" {% endif%} >                       {{transaccion.valor|number_format(2)}}
-                        </span>
-                        </td>
-                       <td data-title="Estado">{{transaccion.estado}}</td>
-                    </tr>
-                {% endfor %} 
-                </tbody>
-            </table>
-        </div>
-        </div>
-        
-      </div>
-    </div>
+    <div class="row">
+       <div class="col s12 m4">
+         <a href="#" class="waves-effect waves-darken block card teal darken-3">
+           <div class="card-content white-text center ">
+             <span class="card-title">RECARGA CLIENTE</span>
+             <i class="material-icons large">attach_money</i>
+             <p> Escanea el código del cliente, recibe el efectivo y adjunta la fotografía del comprobante.</p>
+           </div>
+         </a>
+       </div>
+       <div class="col s12 m4">
+         <a href="{{asset('vendedor/qr/scan')}}" class="waves-effect waves-darken block card blue-grey darken-1">
+           <div class="card-content white-text center">
+             <span class="card-title">CARGAR GASOLINA</span>
+             <i class="material-icons large">local_gas_station</i>
+             <p>Escanea el código del cliente, ingresa el valor a cargar en gasolina y confirma con tu códifo de vendedor.</p>
+           </div>
+         </a>
+       </div>
+
+       <div class="col s12 m4">
+         <a href="{{asset('vendedor/transacciones')}}" class="waves-effect waves-darken block card indigo">
+           <div class="card-content white-text center">
+             <span class="card-title">TRANSACCIONES</span>
+             <i class="material-icons large">trending_up</i>
+             <p>Consulta las transacciones del día y el valor total recargado por medio de la app Permergas.</p>
+           </div>
+         </a>
+       </div>
+     </div>
+</div>
   </section>
+ 
  
  {% endblock %}
 
