--- a/templates/app_vendedor/qr_scanner.html.twig
+++ b/templates/app_vendedor/qr_scanner.html.twig
@@ -7,8 +7,8 @@
 
   <style type="text/css">
      .qrPreviewVideo{
-      width: 300px;
-      height: 225px;
+      width: 50%;
+      height: 50%;
     }
   </style>
 {% endblock %}
@@ -30,7 +30,7 @@
           <li><a href="#!">Solicitar Credito</a></li>
           <li class="divider"></li>
           <li><a href="#!">Información</a></li>
-          <li><a href="{{asset('logout')}}">Cerrar Sesión</a></li>
+          <li><a href="{{asset('vendedor/logout')}}">Cerrar Sesión</a></li>
         </ul>
 
       </div>
@@ -38,10 +38,32 @@
 {% endblock%} 
 {% block body %}
   
- <section class="mt-2" id="section-qr">
+<section id="section-valor" >
+      <div class="row">
+      <div class="col s12">
+  <form action="#" >
+
+  <h4>Qr Scanner</h4>
+     <div class="input-value col s12">
+    <label>
+      <span>Digita el valor de la compra </span>
+      <input name="valor" id="valor" type="text" size="20" onkeydown="return soloNumeros(event)" >
+    </label>
+
+  </div>
+   <button type="submit" id="btn-enviar" class="btn btn-success">Enviar</button>
+  </form>
+</div>
+</div>
+</section>
+
+ <section class="mt-2" id="section-qr" style="display: none;">
     <div class="row">
       <div class="col s12">
- 
+    <form id="frm-enviar-qr" action="{{asset('payment/confirmar/qr')}}" method="POST">
+      <input type="hidden" name="valor" id="valor_qr" value="" >
+      <input type="hidden" name="qr" id="qr_code" value="" >
+
 
       <h4>Qr Scanner</h4>
       <div class="row-element">
@@ -55,7 +77,7 @@
       </div>
       <br>
       <div class="row-element">
-        <div class="qrscanner" id="scanner">
+        <div class="qrscanner" id="scanner" style="width: 100%; height: 200px">
         </div>
       </div>
       <div class="row-element">
@@ -71,28 +93,8 @@
       
       </div>
       <br>
-      
+      </form>
     </div>
-</div>
-</section>
-
-<section id="section-enviar" style="display: none">
-      <div class="row">
-      <div class="col s12">
- 
-  <h4>Qr Scanner</h4>
-  <form action="{{asset('payment/descontar/qr')}}" method="POST">
-    <input type="hidden" id="email_user" name="email_user" value="" >
-     <div class="input-value col s12">
-    <label>
-      <span>Digita el valor de la compra </span>
-      <input name="valor" type="text" size="20" onkeydown="return soloNumeros(event)" >
-    </label>
-
-  </div>
-   <button type="submit" class="btn btn-success">Enviar</button>
-  </form>
-</div>
 </div>
 </section>
 
@@ -107,14 +109,23 @@
       return ((key >= 48 && key <= 57) || (key==8))
     }
 
+    $("#btn-enviar").click(function(e){
+      e.preventDefault();
+      if($("#valor").val()<=0 || $("#valor").val()==""){
+        Materialize.toast('Ingrese un valor para recargar', 4000)
+      }else{
 
+        $("#valor_qr").val($("#valor").val());
+        $("#section-valor").hide();
+        $("#section-qr").show();
+      }
+
+    })
     function onQRCodeScanned(scannedText)
     {
       console.log(scannedText);
-      $('#txtqr').text(scannedText);
-      $('#email_user').val(scannedText);
-      $("#section-enviar").show();
-      $("#section-qr").hide();
+      $('#qr_code').val(scannedText);
+      $("#frm-enviar-qr").submit();
     }
     
     function provideVideo()
