--- a/templates/app/respuesta.html.twig
+++ b/templates/app/respuesta.html.twig
@@ -1,4 +1,11 @@
 {% extends 'base_app.html.twig' %}
+
+ {% if orden._values.payment_status=='paid' %}
+ {% set estado='Aceptada' %}
+ {% else %}
+  {% set estado=orden._values.payment_status %}
+
+ {% endif %}
 {% block style %}
    <link type="text/css" rel="stylesheet" href="{{asset('themeapp/css/responses.css')}}" media="screen,projection" />  
 
@@ -9,7 +16,7 @@
         <ul class="left">
           <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
         </ul>
-        <a href="#!" class="brand-logo">Recargar Cuenta</a>
+        <a href="#!" class="brand-logo">Transacción {{estado}} </a>
         <ul class="right">
           <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
         </ul>
@@ -69,48 +76,49 @@
   </section>
 
 {% else %}
-  <div class="row">
+    <section class="mt-4">
+    <div class="row">
+      <div class="col s12 center">
+        <i class="center check_icon material-icons large white-text green accent-3">check</i>
+      </div>
       <div class="col s12">
-        <ul class="collection with-header">
-          <li class="collection-header">
-            <h4>Respuesta Pago
-             <i class="material-icons large green-text darken-3 center">check</i>
-            </h4>
-          </li>
-          <li class="collection-item">
-                       <div class="card-body table-responsive">
-    <table class="table table-condensed">
-       
+        <div class="card">
+          <table class="bordered">
             <tbody>
-            <tr>
-                <th>Orden Id</th>
-                <td>{{orden._values.id}}</td>
-            </tr>
-            <tr>
-                <th>Valor</th>
-                <td>{{orden._values.amount|slice(0,-2)|number_format(2)}}</td>
-            </tr>
-               <tr>
-                <th>Estado Orden</th>
-                <td>
-                  {% if orden._values.payment_status=='paid' %}
-                  <span style="color: green"> 
-                    Pagada
-                  </span>
-                  {% else %}
-                  <span>Pendiente</span>
-                  {% endif %}
+
+              <tr>
+                <td><b>MEDIO DE PAGO</b></td>
+                <td class="right"><img class="tc_min" height="20px" src="img/icons_cc/visa.png" alt="">
+                  <h4 class="text_pines"> ●●●● 4242</h4>
+                </td>
+              </tr>
+              <tr>
+                <td><b>VALOR (MXN)</b></td>
+                <td class="right">
+                  <h4 class="text_pines">$ {{orden._values.amount|slice(0,-2)|number_format(2)}} </h4>
+                </td>
+              </tr>
+              <tr>
+                <td><b>FECHA</b></td>
+                <td class="right">
+                  <h4 class="text_pines"> {{fecha|date('d/m/y')}} </h4>
+                </td>
+              </tr>
+              <tr>
+                <td><b>HORA</b></td>
+                <td class="right">
+                  <h4 class="text_pines"> {{fecha|date('h:i A')}} </h4>
                 </td>
               </tr>
             </tbody>
-            </table>
-          
-
+          </table>
         </div>
-          </li>
-        </ul>
       </div>
     </div>
+
+
+
+  </section>
 {% endif %}
 
 
