--- a/templates/app/recarga.html.twig
+++ b/templates/app/recarga.html.twig
@@ -119,44 +119,45 @@
 </section>
 
 
-<section id="section-confirmacion"  >
+<section id="section-confirmacion" class="mt-4" >
+  
+  <div class="row">
+
   <form method="POST" action="{{asset('payment/conekta')}}" >
   <input type="hidden" name="medio_pago" id="conekta_medio_pago" value=""> 
   <input type="hidden" name="valor" id="conekta_valor" value="">
   <input type="hidden" name="token_id" id="conekta_token_id" value=""> 
-             
-  <div class="row">
-  <br/><br/>
-    <div class="col s12">
-        <ul class="collection with-header">
-          <li class="collection-header">
-            <h4>Confirmación Recargas</h4>
-          </li>
-           <li>
-            <a id="" href="#" class="collection-item">Valor:<span id="valor_confirmacion">2000</span> MX</a>
-          </li>
-         <li>
-            <a id="html_medio" class="collection-item">
+  
+      <div class="col s12">
+        <div class="card">
+          <table class="bordered">
+            <tbody>
+              <tr>
+                <td><b>MEDIO DE PAGO</b></td>
+                <td class="right" id="html_medio" style="font-size: 2.28rem">
+                  <img class="tc_min" height="20px" src="img/icons_cc/visa.png" alt="">
+                  <h4 class="text_pines"> ●●●● 6765</h4>
+                </td>
+              </tr>
+              <tr>
+                <td><b>VALOR (MXN)</b></td>
+                <td class="right">
+                  <h4 class="text_pines">$ <span id="valor_confirmacion">2000</span> MX  </h4>
+                </td>
+            </tr></tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col s12">
             
-            </a>
-          </li>
-          <li>
-           <div class="input-field col s12">
-            
-              <button type="submit" id="confirmar" class="btn-app  bg_principal waves-effect waves-darken btn"> Enviar </button>
-             </form>
-               <br/>
-              <br/>
-          </div>
-
-        </li>
-
-        </ul>
-
-    </div>
-</div>
+             <button type="submit" id="confirmar" class="btn-app  bg_principal waves-effect waves-darken btn"> Realizar Recarga </button>
+      </div>
+   
 </form>
+</div>
 </section>
+
+
 
 
 {% endblock %}
