imagen tc en respuesta

--- a/templates/app/respuesta.html.twig
+++ b/templates/app/respuesta.html.twig
@@ -88,7 +88,7 @@
 
               <tr>
                 <td><b>MEDIO DE PAGO</b></td>
-                <td class="right"><img class="tc_min" height="20px" src="img/icons_cc/visa.png" alt="">
+                <td class="right"><img class="tc_min" height="20px" src="{{asset('themeapp/img/icons_cc/visa.png')}}" alt="">
                   <h4 class="text_pines"> ●●●● 4242</h4>
                 </td>
               </tr>
