--- a/templates/app/recarga.html.twig
+++ b/templates/app/recarga.html.twig
@@ -10,7 +10,7 @@
         <ul class="left">
           <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
         </ul>
-        <a href="#!" class="brand-logo">Recargar Cuenta</a>
+        <a href="#!" class="brand-logo" id="title_pagina">Recargar Cuenta</a>
         <ul class="right">
           <li><a class='dropdown-button' href='#' data-activates='menu2'><i class="material-icons">more_vert</i></a></li>
         </ul>
